libs/@local/hashql/eval/tests/ui/graph/read/entity/unsupported-nested-graph-read.jsonc
//@ run: fail
//@ description: Nested graph read operations not supported in filter expressions
// biome-ignore format: readability
["let", "read",
  ["::graph::tail::collect",
    ["::graph::body::filter",
      ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
      ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
        ["==",
          "vertex.id.entity_id.entity_uuid",
          "vertex.id.entity_id.entity_uuid"
        ]
      ]
    ]],
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        "read",
        //~^ ERROR Nested graph read operations not supported here
        "read"
        //~^ ERROR Nested graph read operations not supported here
      ]
    ]
  ]
]]
